Added Interaction Rules for clarifications and magic types
Overall code cleanup
Added java documentation to magic system
Updated language translations
Added error handling for the magic system
Balanced Complexity of spells
Added Interaction rules for clarifications and magic types
 - conflict resolution: priority based conflict resolution for clarification/magic types